--- a/files/productPage/product.html
+++ b/files/productPage/product.html
@@ -24,6 +24,21 @@
                 <a href="../uplaodPage/upload.html">Upload</a>
             </div>
         </nav>
+        <!-- <div class="box-dialog-chart" style="display: none;">
+            <dialog open>
+                <header>To buy</header>
+                <di v class="list-chart">
+                    <div class="item">
+                        <img src="../../img/ASUS-RGOS-header-1.jpg" alt="" width="50px">
+                        <h4>asus</h4>
+                        <menu>
+                            <button>Remove</button>
+                            <button>Buy</button>
+                        </menu>
+                    </div>
+                </div>
+            </dialog>
+        </div> -->
         <div class="header">
             <!-- Slideshow container -->
             <div class="slideshow-container">
