--- a/files/uplaodPage/upload.html
+++ b/files/uplaodPage/upload.html
@@ -32,23 +32,23 @@
                     <div class="data">
                         <section>
                             <label>Brand model: </label>
-                            <input id="title" type="text" />
+                            <input id="title" type="text"  />
                             <label>Price: </label>
-                            <input type="number" name="currency-field" id="price" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" value="" data-type="currency" placeholder="$1,000,000.00">                            
+                            <input type="number"  ame="currency-field" id="price" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" value="" data-type="currency" placeholder="$1,000,000.00">                            
                             <label>Availablity: </label>
-                            <input id="availablity" type="text"/>
+                            <input id="availablity" type="text" />
                             <label>Screen size: </label>
-                            <input id="screen" type="text"/>
+                            <input id="screen" type="text" />
                           </section>
                           <section>
                             <label>CPU: </label>
                             <input id="cpu" type="text" />
                             <label>RAM: </label>
-                            <input id="ram" type="text"/>
+                            <input id="ram" type="text" />
                             <label>Storage: </label>
-                            <input id="storage" type="text"/>
+                            <input id="storage" type="text" />
                             <label>Color: </label>
-                            <select name="" id="color">
+                            <select name="" id="color" >
                               <option value="">Red</option>
                               <option value="">Blue</option>
                               <option value="">White</option>
@@ -59,7 +59,7 @@
                           </section>
                           <section>
                             <label>Description: </label>
-                            <textarea name="" id="description" cols="30" rows="10"></textarea>
+                            <textarea name="" id="description" cols="30" rows="10" ></textarea>
                           </section>
     
                     </div>
