[ALL_PAGE]: change some style on all pages

--- a/files/detailPage/detail.html
+++ b/files/detailPage/detail.html
@@ -71,7 +71,7 @@
         <nav>
             <div class="navbar-left">
                 <a href="../../index.html">Home</a>
-                <a href="../productPage/product.html" class="active">Product</a>
+                <a href="../productPage/product.html"    class="active">Product</a>
             </div>
             <div class="navbar-mid">
                 <a href="../../index.html"><img src="../../img/shi_ga-logo (1).png" alt="" width="150px"></a>
@@ -100,8 +100,8 @@
                 </div>
                 <p>Description: <span id="description"></span></p>
                 <menu>
-                    <button>Buy</button>
-                    <button onclick="addCart()">Chart</button>
+                    <button onclick="showBuydialog()">Buy</button>
+                    <button onclick="addCart()">Cart</button>
                 </menu>
             </div>
             <div class="other">
