--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
             <h1>Popular Brand Name</h1>
             <div class="list-brand">
                 <div class="show-img">
-                    <img src="img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" alt="" width="600px">
+                    <img src="img/asus-rog-strix-scar-17.jpg" alt="" width="600px">
                     <h1>ASUS</h1>
                 </div>
                 <div class="show-img">
-                    <img src="img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" alt="" width="600px">
+                    <img src="img/msi_raider_ge_76_gaming_laptop_website_1641393146763.jpg" alt="" width="600px">
                     <h1>MSI</h1>
                 </div>
                 <div class="show-img">
-                    <img src="img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" alt="" width="600px">
+                    <img src="img/lenovolegion5pro-1658155480534.jpg" alt="" width="600px">
                     <h1>Lenovo</h1>
                 </div>
                 <div class="show-img">
-                    <img src="img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" alt="" width="600px">
+                    <img src="img/GfinEMFXnT42BFxAcDc2rA.jpg" alt="" width="600px">
                     <h1>Macbook</h1>
                 </div>
             </div>
@@ -58,22 +58,22 @@
         <div class="list-item">
             <div class="detail">
                 <div class="img">
-                    <img src="img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" alt="">
+                    <img src="img/msi_raider_ge_76_gaming_laptop_website_1641393146763.jpg" alt="">
                 </div>
                 <div class="info">
                     <h1>MSI</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam libero hic aliquam quos? Est
-                        necessitatibus neque pariatur, libero error tenetur?</p>
-                    <button>Views Detail</button>
+                    <p>MSI is not only known as one of the best laptop brands out there but also a world-leading brand when it comes to gaming. MSI is trusted in the eSports community and they sponsor a lot of gaming teams with their products.</p>
+                    <button><a href="https://www.msi.com/index.php">Views Detail</a></button>
+
                 </div>
             </div>
             <div class="detail">
 
                 <div class="info">
-                    <h1>MSI</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam libero hic aliquam quos? Est
-                        necessitatibus neque pariatur, libero error tenetur?</p>
-                    <button>Views Detail</button>
+                    <h1>ASUS</h1>
+                    <p>ASUS's products are well-known for their more affordable, trendy, and accessible models, and precisely it has received around 1800 awards for its work in design, performance, and incredible innovation.</p>
+                    <button><a href="https://www.asus.com/">Views Detail</a></button>
+
                 </div>
                 <div class="img">
                     <img src="img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" alt="">
@@ -82,14 +82,14 @@
             </div>
             <div class="detail">
                 <div class="img">
-                    <img src="img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" alt="">
+                    <img src="img/GfinEMFXnT42BFxAcDc2rA.jpg" alt="">
                 </div>
                 <div class="info">
 
-                    <h1>MSI</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam libero hic aliquam quos? Est
-                        necessitatibus neque pariatur, libero error tenetur?</p>
-                    <button>Views Detail</button>
+                    <h1>Macbook</h1>
+                    <p>Our most popular laptop, MacBook Air is supercharged by M1 and M2 chips. Featuring FaceTime HD camera, Touch ID, and vibrant Retina display. MacBook Air, MacBook Pro, iMac, Mac mini, Mac Studio, and Studio Display.</p>
+                    
+                    <button><a href="https://www.apple.com/macbook-pro/">Views Detail</a></button>
                 </div>
             </div>
         </div>
