--- a/files/productPage/product.html
+++ b/files/productPage/product.html
@@ -12,6 +12,61 @@
 
 <body>
     <div class="pro-container">
+        <div class="box-dialog-buy" style="display: none;">
+            <dialog open>
+                <!-- <header>Buy</header> -->
+                <div class="container">
+                    <form>
+                        <div class="billing">
+                            <h3>Billing Address</h3>
+                            <label for="fname"><i class="fa fa-user"></i> Full Name</label>
+                            <input type="text" id="fname" name="firstname" placeholder="John M. Doe">
+                            <label for="email"><i class="fa fa-envelope"></i> Email</label>
+                            <input type="text" id="email" name="email" placeholder="john@example.com">
+                            <label for="adr"><i class="fa fa-address-card-o"></i> Address</label>
+                            <input type="text" id="adr" name="address" placeholder="542 W. 15th Street">
+                            <label for="city"><i class="fa fa-institution"></i> City</label>
+                            <input type="text" id="city" name="city" placeholder="New York">
+                            <label for="state">State</label>
+                            <input type="text" id="state" name="state" placeholder="NY">
+                        </div>
+
+                        <div class="payment">
+                            <h3>Payment</h3>
+                            <label for="fname">Accepted Cards</label>
+                            <div class="icon-container">
+                                <i class="fa fa-cc-visa" style="color:navy;"></i>
+                                <i class="fa fa-cc-amex" style="color:blue;"></i>
+                                <i class="fa fa-cc-mastercard" style="color:red;"></i>
+                                <i class="fa fa-cc-discover" style="color:orange;"></i>
+                            </div>
+                            <label for="cname">Name on Card</label>
+                            <input type="text" id="cname" name="cardname" placeholder="John More Doe">
+                            <label for="ccnum">Credit card number</label>
+                            <input type="text" id="ccnum" name="cardnumber" placeholder="1111-2222-3333-4444">
+                            <label for="expmonth">Exp Month</label>
+                            <input type="text" id="expmonth" name="expmonth" placeholder="September">
+
+                            <div class="year-number">
+                                <div>
+                                    <label for="expyear">Exp Year</label>
+                                    <input type="text" id="expyear" name="expyear" placeholder="2018">
+                                </div>
+                                <div>
+                                    <label for="cvv">CVV</label>
+                                    <input type="text" id="cvv" name="cvv" placeholder="352">
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="btn">
+                    <button onclick="hideBuy()">Back</button>
+                    <button>Buy</button>
+
+                </div>
+            </dialog>
+        </div>
         <nav>
             <div class="navbar-left">
                 <a href="../../index.html">Home</a>
@@ -24,21 +79,7 @@
                 <a href="../uplaodPage/upload.html">Upload</a>
             </div>
         </nav>
-        <!-- <div class="box-dialog-chart" style="display: none;">
-            <dialog open>
-                <header>To buy</header>
-                <di v class="list-chart">
-                    <div class="item">
-                        <img src="../../img/ASUS-RGOS-header-1.jpg" alt="" width="50px">
-                        <h4>asus</h4>
-                        <menu>
-                            <button>Remove</button>
-                            <button>Buy</button>
-                        </menu>
-                    </div>
-                </div>
-            </dialog>
-        </div> -->
+
         <div class="header">
             <!-- Slideshow container -->
             <div class="slideshow-container">
@@ -46,31 +87,31 @@
                 <!-- Full-width images with number and caption text -->
                 <div class="mySlides fade">
                     <div class="numbertext">1 / 5</div>
-                    <img src="../../img/Mi-Notebook-Pro-X-15-1024x638-1024x638.jpg" style="width:65%">
+                    <img src="../../img/asus-rog-strix-scar-17.jpg">
                     <div class="text">Caption Text</div>
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">2 / 5</div>
-                    <img src="../../img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" style="width:65%">
+                    <img src="../../img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg">
                     <div class="text">Caption Two</div>
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">3 / 5</div>
-                    <img src="../../img/Mi-Notebook-Pro-X-15-1024x638-1024x638.jpg" style="width:65%">
+                    <img src="../../img/msi_raider_ge_76_gaming_laptop_website_1641393146763.jpg">
                     <div class="text">Caption Three</div>
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">4 / 5</div>
-                    <img src="../../img/Mi-Notebook-Pro-X-15-1024x638-1024x638.jpg" style="width:65%">
+                    <img src="../../img/GfinEMFXnT42BFxAcDc2rA.jpg">
                     <div class="text">Caption Three</div>
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">5 / 5</div>
-                    <img src="../../img/Mi-Notebook-Pro-X-15-1024x638-1024x638.jpg" style="width:65%">
+                    <img src="../../img/lenovolegion5pro-1658155480534.jpg">
                     <div class="text">Caption Three</div>
                 </div>
 
@@ -78,9 +119,9 @@
             <br>
         </div>
         <div class="main-image">
-            <img src="../../img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" alt="" width="500px">
-            <img src="../../img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" alt="" width="500px">
-            <img src="../../img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" alt="" width="500px">
+            <img src="../../img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" alt="" >
+            <img src="../../img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" alt="" >
+            <img src="../../img/asus_laptops_2022_asus_zephyrus_duo_16-1024x538.jpg" alt="" >
         </div>
         <div class="content-list">
             <aside>
@@ -160,6 +201,12 @@
             </div>
 
         </div>
+    </div>
+    <div class="box-dialog-chart">
+        <dialog open>
+            <header>To buy</header>
+            <div class="list-cart"></div>
+        </dialog>
     </div>
 </body>
 <script src="js/mainProduct.js"></script>
